// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <Button /> Next: should mount without exploding in disabled state 1`] = `
<Button
  className="next"
  condition={true}
  fn={[Function]}
  text="Next"
>
  <button
    className="next"
    disabled={true}
    onClick={[Function]}
  >
    Next
  </button>
</Button>
`;

exports[`Component: <Button /> Next: should mount without exploding in enabled state 1`] = `
<Button
  className="next"
  condition={false}
  fn={[Function]}
  text="Next"
>
  <button
    className="next"
    disabled={false}
    onClick={[Function]}
  >
    Next
  </button>
</Button>
`;

exports[`Component: <Button /> Prev: should mount without exploding  in disabled state 1`] = `
<Button
  className="prev"
  condition={true}
  fn={[Function]}
  text="Prev"
>
  <button
    className="prev"
    disabled={true}
    onClick={[Function]}
  >
    Prev
  </button>
</Button>
`;

exports[`Component: <Button /> Prev: should mount without exploding  in enabled state 1`] = `
<Button
  className="prev"
  condition={false}
  fn={[Function]}
  text="Prev"
>
  <button
    className="prev"
    disabled={false}
    onClick={[Function]}
  >
    Prev
  </button>
</Button>
`;
